error.txt
❯ gcc term_render.c -o term_render -lm -lncurses
term_render.c: In function ‘main’:
term_render.c:249:9: error: parameter ‘current_point’ is initialized
  249 |         int current_point = -1;
      |         ^~~
term_render.c:251:9: error: parameter ‘filename’ is initialized
  251 |         char* filename = "shape.csv";
      |         ^~~~
term_render.c:254:9: error: expected declaration specifiers before ‘while’
  254 |         while ((opt = getopt(argc, argv, "f:")) != -1) {
      |         ^~~~~
term_render.c:265:5: error: expected declaration specifiers before ‘initscr’
  265 |     initscr();
      |     ^~~~~~~
term_render.c:266:5: error: expected declaration specifiers before ‘noecho’
  266 |     noecho();
      |     ^~~~~~
term_render.c:267:5: error: expected declaration specifiers before ‘curs_set’
  267 |     curs_set(FALSE);
      |     ^~~~~~~~
In file included from term_render.c:14:
term_render.c:268:5: error: expected declaration specifiers before ‘wtimeout’
  268 |     timeout(0);
      |     ^~~~~~~
term_render.c:269:9: error: expected declaration specifiers before ‘start_color’
  269 |         start_color();
      |         ^~~~~~~~~~~
term_render.c:271:9: error: expected declaration specifiers before ‘init_pair’
  271 |         init_pair(1, COLOR_WHITE, COLOR_BLACK);
      |         ^~~~~~~~~
term_render.c:272:9: error: expected declaration specifiers before ‘init_pair’
  272 |         init_pair(2, COLOR_RED, COLOR_BLACK);
      |         ^~~~~~~~~
term_render.c:273:9: error: expected declaration specifiers before ‘init_pair’
  273 |         init_pair(3, COLOR_CYAN, COLOR_BLACK);
      |         ^~~~~~~~~
term_render.c:274:9: error: expected declaration specifiers before ‘init_pair’
  274 |         init_pair(4, COLOR_YELLOW, COLOR_BLACK);
      |         ^~~~~~~~~
term_render.c:275:9: error: expected declaration specifiers before ‘init_pair’
  275 |         init_pair(5, COLOR_GREEN, COLOR_BLACK);
      |         ^~~~~~~~~
term_render.c:276:9: error: expected declaration specifiers before ‘init_pair’
  276 |         init_pair(6, COLOR_BLUE, COLOR_BLACK);
      |         ^~~~~~~~~
term_render.c:277:9: error: expected declaration specifiers before ‘init_pair’
  277 |         init_pair(7, COLOR_MAGENTA, COLOR_BLACK);
      |         ^~~~~~~~~
term_render.c:278:9: error: expected declaration specifiers before ‘init_pair’
  278 |         init_pair(8, COLOR_WHITE, COLOR_BLACK);
      |         ^~~~~~~~~
term_render.c:279:9: error: expected declaration specifiers before ‘init_pair’
  279 |         init_pair(9, COLOR_WHITE, COLOR_BLACK);
      |         ^~~~~~~~~
term_render.c:284:9: error: expected declaration specifiers before ‘if’
  284 |         if (!loadShapeCsv(filename, &object)) {
      |         ^~
term_render.c:290:5: error: parameter ‘angle’ is initialized
  290 |     float angle = 0;
      |     ^~~~~
term_render.c:291:9: error: parameter ‘scale’ is initialized
  291 |         float scale = 0;
      |         ^~~~~
term_render.c:292:9: error: parameter ‘center3d’ is initialized
  292 |         vec3 center3d = get3DShapeCenter(&object);
      |         ^~~~
term_render.c:294:9: error: expected declaration specifiers before ‘scale’
  294 |         scale = autoScale(&object, COLS, LINES, PROJECTION_DISTANCE);
      |         ^~~~~
term_render.c:296:9: error: expected declaration specifiers before ‘while’
  296 |         while (1) {
      |         ^~~~~
term_render.c:352:5: error: expected declaration specifiers before ‘endwin’
  352 |     endwin();
      |     ^~~~~~
term_render.c:353:5: error: expected declaration specifiers before ‘return’
  353 |     return 0;
      |     ^~~~~~
term_render.c:354:1: error: expected declaration specifiers before ‘}’ token
  354 | }
      | ^
term_render.c:248:5: error: old-style parameter declarations in prototyped function definition
  248 | int main(int argc, char *argv[])
      |     ^~~~
term_render.c:355: error: expected ‘{’ at end of input

  268 |     timeout(0);
      |     ^~~~~~~
term_render.c:269:9: error: expected declaration specifiers before ‘start_color’
  269 |         start_color();
      |         ^~~~~~~~~~~
term_render.c:271:9: error: expected declaration specifiers before ‘init_pair’
  271 |         init_pair(1, COLOR_WHITE, COLOR_BLACK);
      |         ^~~~~~~~~
term_render.c:272:9: error: expected declaration specifiers before ‘init_pair’
  272 |         init_pair(2, COLOR_RED, COLOR_BLACK);
      |         ^~~~~~~~~
term_render.c:273:9: error: expected declaration specifiers before ‘init_pair’
  273 |         init_pair(3, COLOR_CYAN, COLOR_BLACK);
      |         ^~~~~~~~~
term_render.c:274:9: error: expected declaration specifiers before ‘init_pair’
  274 |         init_pair(4, COLOR_YELLOW, COLOR_BLACK);
      |         ^~~~~~~~~
term_render.c:275:9: error: expected declaration specifiers before ‘init_pair’
  275 |         init_pair(5, COLOR_GREEN, COLOR_BLACK);
      |         ^~~~~~~~~
term_render.c:276:9: error: expected declaration specifiers before ‘init_pair’
  276 |         init_pair(6, COLOR_BLUE, COLOR_BLACK);
      |         ^~~~~~~~~
term_render.c:277:9: error: expected declaration specifiers before ‘init_pair’
  277 |         init_pair(7, COLOR_MAGENTA, COLOR_BLACK);
      |         ^~~~~~~~~
term_render.c:278:9: error: expected declaration specifiers before ‘init_pair’
  278 |         init_pair(8, COLOR_WHITE, COLOR_BLACK);
      |         ^~~~~~~~~
term_render.c:279:9: error: expected declaration specifiers before ‘init_pair’
  279 |         init_pair(9, COLOR_WHITE, COLOR_BLACK);
      |         ^~~~~~~~~
term_render.c:284:9: error: expected declaration specifiers before ‘if’
  284 |         if (!loadShapeCsv(filename, &object)) {
      |         ^~
term_render.c:290:5: error: parameter ‘angle’ is initialized
  290 |     float angle = 0;
      |     ^~~~~
term_render.c:291:9: error: parameter ‘scale’ is initialized
  291 |         float scale = 0;
      |         ^~~~~
term_render.c:292:9: error: parameter ‘center3d’ is initialized
  292 |         vec3 center3d = get3DShapeCenter(&object);
      |         ^~~~
term_render.c:294:9: error: expected declaration specifiers before ‘scale’
  294 |         scale = autoScale(&object, COLS, LINES, PROJECTION_DISTANCE);
      |         ^~~~~
term_render.c:296:9: error: expected declaration specifiers before ‘while’
  296 |         while (1) {
      |         ^~~~~
term_render.c:352:5: error: expected declaration specifiers before ‘endwin’
  352 |     endwin();
      |     ^~~~~~
term_render.c:353:5: error: expected declaration specifiers before ‘return’
  353 |     return 0;
      |     ^~~~~~
term_render.c:354:1: error: expected declaration specifiers before ‘}’ token
  354 | }
      | ^
term_render.c:248:5: error: old-style parameter declarations in prototyped function definition
  248 | int main(int argc, char *argv[])
      |     ^~~~
term_render.c:355: error: expected ‘{’ at end of input


